test/zinc_source/compile_errors/enums/05_unit_variant_pattern_shape.zn
// expected-error: unit variant 'Message.Quit' does not take fields in match patterns
enum Message {
    Quit
}

fn main() {
    msg = Message.Quit
    match msg {
        Message.Quit { value } => {
            print(value)
        },
    }
}
